Basic CSS layout

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
     <title>NFT Card Component</title>
 </head>
-<body>
+<body class= BG>
+<div class = cardBG></div>
+<div><img class = "ethMainPic" src = "Resources/images/image-equilibrium.jpg" alt="ethereum main background>"</div>
+
 
 </body>
 </html>
