--- a/index.html
+++ b/index.html
@@ -5,15 +5,38 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>NFT Card Component</title>
 </head>
 <body class= BG>
-<div class = cardBG></div>
-<div><img class = "ethMainPic" src = "Resources/images/image-equilibrium.jpg" alt="ethereum main background>"</div>
+<div class = cardBG>
+    <div>
+        <img class = ethMainPic src = "Resources/images/image-equilibrium.jpg" alt="ethereum main background>"
+    </div>
+    <div class = underPicture>
+        <div>
+        <p class = header>Equilibrium #3429</p>
+        </div>
+            <div>
+                <p class = description>Our Equilibrium collection promotes balance and calm.</p>
+            </div>
+        <div>
+            <img class = ethLogo src = "Resources/images/icon-ethereum.svg" alt="Ethereum Logo">
+                <p class = ethPrice>0.041 ETH</p>
+            <img class = ethClock src = "Resources/images/icon-clock.svg" alt="Ethereum Logo">
+                <p class = ethTimeText> 3 days left</p>
+        </div>
+        <div class = userContainer>
+            <img class = userImage src = "Resources/images/image-avatar.png" alt="User Image">
+            <p class = User> Creation of <span id = whiteName>Igor Milosavljevic</span></p>
+        </div>
+    </div>
+</div>
+
+
 
 
 </body>
