--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div>
         <img class = ethMainPic src = "Resources/images/image-equilibrium.jpg" alt="ethereum main background>"
     </div>
+    <div>
+        <img class = overlay src="Resources/images/icon-view.svg" alt="Hover Icon">
+    </div>
     <div class = underPicture>
         <div>
         <p class = header>Equilibrium #3429</p>
