--- a/index.html
+++ b/index.html
@@ -11,36 +11,32 @@
     <link rel="stylesheet" href="style.css">
     <title>NFT Card Component</title>
 </head>
-<body class= BG>
-<div class = cardBG>
-    <div>
-        <img class = ethMainPic src = "Resources/images/image-equilibrium.jpg" alt="ethereum main background>"
+<body class="BG">
+<div class="cardBG">
+    <div class="test">
+        <div class="testColor"></div>
+        <img class="ethMainPic" src="Resources/images/image-equilibrium.jpg" alt="ethereum main background">
+        <img class="overlay" src="Resources/images/icon-view.svg" alt="Hover Icon">
     </div>
-    <div>
-        <img class = overlay src="Resources/images/icon-view.svg" alt="Hover Icon">
-    </div>
-    <div class = underPicture>
+
+    <div class="underPicture">
         <div>
-        <p class = header>Equilibrium #3429</p>
+            <p class="header">Equilibrium #3429</p>
         </div>
-            <div>
-                <p class = description>Our Equilibrium collection promotes balance and calm.</p>
-            </div>
         <div>
-            <img class = ethLogo src = "Resources/images/icon-ethereum.svg" alt="Ethereum Logo">
-                <p class = ethPrice>0.041 ETH</p>
-            <img class = ethClock src = "Resources/images/icon-clock.svg" alt="Ethereum Logo">
-                <p class = ethTimeText> 3 days left</p>
+            <p class="description">Our Equilibrium collection promotes balance and calm.</p>
         </div>
-        <div class = userContainer>
-            <img class = userImage src = "Resources/images/image-avatar.png" alt="User Image">
-            <p class = User> Creation of <span id = whiteName>Igor Milosavljevic</span></p>
+        <div class="ethContainer">
+            <img class="ethLogo" src="Resources/images/icon-ethereum.svg" alt="Ethereum Logo">
+            <p class="ethPrice">0.041 ETH</p>
+            <img class="ethClock" src="Resources/images/icon-clock.svg" alt="Ethereum Logo">
+            <p class="ethTimeText"> 3 days left</p>
+        </div>
+        <div class="userContainer">
+            <img class="userImage" src="Resources/images/image-avatar.png" alt="User Image">
+            <p class="User"> Creation of <span id="whiteName">Igor Milosavljevic</span></p>
         </div>
     </div>
 </div>
-
-
-
-
 </body>
 </html>
